Extended properties of canvasdata by name, id, designedFor
